Cleanup of latex document, including addition of github source

--- a/latex document/ml_droplet_collision.bib
+++ b/latex document/ml_droplet_collision.bib
@@ -19,6 +19,16 @@
   publisher={Cambridge University Press}
 }
 
+@misc{githubrepo,
+  author = {Arpit Agarwal},
+  title = {Github repository titled machine-learning-droplet-collision-modeling},
+  year = {2021},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/arpitragarwal/machine-learning-droplet-collision-modeling}},
+  commit = {4f57d6a0e4c030202a07a60bc1bb1ed1544bf679}
+}
+
 @article{ashgriz1990coalescence,
   title={Coalescence and separation in binary collisions of liquid drops},
   author={Ashgriz, N and Poo, JY},
@@ -63,11 +73,19 @@
  year={2011}
 }
 
-@article{evaluating_collision,
- title={The Computational Cost and Accuracy of Spray Droplet Collision Models},
- author={Agarwal, Arpit and Wang, Yue and Liang, Long and Naik, Chitral and Meeks, Ellen},
- journal={SAE Technical Paper (under review)},
- year={2019}
+@techreport{agarwal2019computational,
+  title={The computational cost and accuracy of spray droplet collision models},
+  author={Agarwal, Arpit and Wang, Yue and Liang, Long and Naik, Chitralkumar and Meeks, Ellen},
+  year={2019},
+  institution={SAE Technical Paper}
+}
+
+@article{macinnes1991comparisons,
+  title={Comparisons of deterministic and stochastic computations of drop collisions in dense sprays},
+  author={MacInnes, JM and Bracco, FV},
+  journal={Numerical Approaches to Combustion Modeling},
+  pages={615--642},
+  year={1991}
 }
 
 @misc{rohatgi2011webplotdigitizer,
